apps/hermes/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hermes
  namespace: hermes
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hermes.licht.moe`)
      services:
        - name: hermes
          port: 9119
  tls:
    secretName: hermes-tls
